--- a/package.json
+++ b/package.json
@@ -45,5 +45,17 @@
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "~4.1.5"
-  }
+  },
+  "description": "This project was generated with [Angular CLI](https://github.com/angular/angular-cli) version 11.2.4.",
+  "main": "karma.conf.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/pgPilfs/proyecto-2c-g2c.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/pgPilfs/proyecto-2c-g2c/issues"
+  },
+  "homepage": "https://github.com/pgPilfs/proyecto-2c-g2c#readme"
 }
