backend nueva version

--- a/BACK-END/WebApiGCPIL/Web.config
+++ b/BACK-END/WebApiGCPIL/Web.config
@@ -38,7 +38,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="WebGrease" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-1.6.5135.21930" newVersion="1.6.5135.21930" />
+        <bindingRedirect oldVersion="0.0.0.0-1.6.5135.21930" newVersion="1.6.5135.21930" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Helpers" publicKeyToken="31bf3856ad364e35" />
@@ -60,7 +60,10 @@
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
   </system.codedom>
+	<!--<connectionStrings>
+		<add name="BDLocal" connectionString="Server=localhost\MSSQLSERVER01;Database=PILMONEY_GC;User Id=sa; Password=1234;" />
+	</connectionStrings>-->
 	<connectionStrings>
-		<add name="BDLocal" connectionString="Server=localhost\MSSQLSERVER01;Database=PILMONEY_GC;User Id=sa; Password=1234;"/>
+		<add name="BDLocal" connectionString="workstation id=pilmoneygc.mssql.somee.com;packet size=4096;user id=marian_1490_1_SQLLogin_1;pwd=soop3y9x3u;data source=pilmoneygc.mssql.somee.com;persist security info=False;initial catalog=pilmoneygc;" />
 	</connectionStrings>
 </configuration>
